[project]
name = "code_review_crew_for_github_pull_request"
version = "0.1.0"
description = "code_review_crew_for_github_pull_request using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]==0.134.0",
    "pygithub>=2.5.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
code_review_crew_for_github_pull_request = "code_review_crew_for_github_pull_request.main:run"
run_crew = "code_review_crew_for_github_pull_request.main:run"
train = "code_review_crew_for_github_pull_request.main:train"
replay = "code_review_crew_for_github_pull_request.main:replay"
test = "code_review_crew_for_github_pull_request.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
